# dictionary-pipeline

./: .gitignore  .venv  README.md  pyproject.toml
.github/workflows/: community-pii-gate.yml
community/: CONTRIBUTING.md  README.md
community/_template/: README.md  dictionary.yaml
docs/: README.md  workflow.md
docs/superpowers/plans/: 2026-04-12-v0.2-packaging.md
project_files/: dictionary_contract_format.md  new_dataset_prompt.md  pipeline_spec.md  project_instructions.md  stage_prompts.md
scripts/: scan_community_pii.py
src/dictionary_pipeline/: assumptions.py  bulk.py  cli.py  community.py  contract.py  logging.py  pii.py  scrub.py
src/dictionary_pipeline/stages/: s0_intake.py  s1_profile.py  s3_dictionary.py  s4_enforce.py  s5_clean.py  s6_judgment.py  s7_derive.py  s8_validate.py  s9_export.py
tests/: test_assumptions.py  test_bulk.py  test_community.py  test_community_cli.py  test_contract.py  test_cross_field.py  test_freshness.py  test_fuzzy_dedup.py  test_intake.py  test_null_propagation.py  test_pii.py  test_profile_enhancements.py  test_profile_html.py  test_profile_pii.py  test_qa_checks.py  test_scan_community_script.py  test_scrub.py
